--- a/.github/workflows/isotovideo.yml
+++ b/.github/workflows/isotovideo.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Zaoliang/isotovideo-action@main
         with:
-          schedule: tests/console/save_ulog
+          schedule: test/boot/boot_to_desktop,tests/console/save_ulog
       - uses: actions/upload-artifact@v2
         with:
           name: Test results
