--- a/.github/workflows/isotovideo.yml
+++ b/.github/workflows/isotovideo.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: kalikiana/isotovideo-action@main
         with:
-          schedule: tests/console/ulog
+          schedule: tests/console/save_ulog,tests/console/do_nothing
       - uses: actions/upload-artifact@v2
         with:
           name: Test results
