--- a/.github/workflows/isotovideo.yml
+++ b/.github/workflows/isotovideo.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: kalikiana/isotovideo-action@main
         with:
-          schedule: tests/save_ulog,tests/show_dir,tests/write2log
+          schedule: tests/save_ulog,tests/show_dir,tests/write2log,tests/zypper_install
       - uses: actions/upload-artifact@v2
         with:
           name: Test results
